# cpp_demangle

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  coverage  rustfmt.toml
.github/workflows/: ci.yml
c_api/: Cargo.toml  c_api.rs  cpp_demangle.h  run_test.sh
c_api/include/: cpp_demangle.h
c_api/src/: c_api.rs  cpp_demangle.h  lib.rs
c_api/test/: .clang-format  .gitignore  Makefile  cxxfilt.c  test.sh
examples/: cppfilt.rs  simple.rs
fuzz/: Cargo.toml
fuzz/fuzzers/: cppfilt_differential.rs  parse_and_stringify.rs
in/: afl_crash_0  afl_crash_1  afl_crash_10  afl_crash_11  afl_crash_12  afl_crash_13  afl_crash_14  afl_crash_15  afl_crash_16  afl_crash_17  afl_crash_18  afl_crash_19  afl_crash_2  afl_crash_20  afl_crash_21  afl_crash_22  afl_crash_23  afl_crash_24  afl_crash_25  afl_crash_26  afl_crash_27  afl_crash_28  afl_crash_29  afl_crash_3  afl_crash_30  afl_crash_31  afl_crash_32  afl_crash_4  afl_crash_5  afl_crash_6  afl_crash_7  afl_crash_8  afl_crash_9  afl_hang_0  afl_hang_1  afl_hang_10  afl_hang_11  afl_hang_12  afl_hang_13  afl_hang_14  (+39 more)
src/: ast.rs  error.rs  index_str.rs  lib.rs  logging.rs  res.rs  subs.rs  testing.rs
tests/: README.md  afl_seeds.rs  libiberty.rs  libxul.rs  tests.rs
