[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>", "Jim Blandy <jimb@red-bean.com>"]
build = "build.rs"
categories = ["development-tools::debugging", "development-tools::ffi"]
description = "A crate for demangling C++ symbols"
documentation = "https://docs.rs/cpp_demangle"
keywords = ["demangle", "symbolicate", "c-plus-plus", "itanium"]
license = "Apache-2.0/MIT"
name = "cpp_demangle"
readme = "./README.md"
repository = "https://github.com/fitzgen/cpp_demangle"
version = "0.2.2"

[badges]

[badges.travis-ci]
repository = "fitzgen/cpp_demangle"

[[bin]]
name = "cppfilt"
path = "src/bin/cppfilt.rs"
required-features = ["cppfilt"]

[build-dependencies]
glob = "0.2.11"

[dependencies]
fixedbitset = "0.1.5"

[dependencies.afl]
optional = true
version = "0.1.5"

[dependencies.afl-plugin]
optional = true
version = "0.1.5"

[dependencies.clap]
optional = true
version = "2.24.2"

[dev-dependencies]
diff = "0.1.10"

[features]
# Build the `c++filt` clone executable.
cppfilt = ["clap"]

# Default features.
default = ["cppfilt"]

# Build with support for fuzzing with AFL.rs.
fuzz = ["afl", "afl-plugin"]

# Enable copious amounts of logging. Only useful for hacking on `cpp_demangle`
# itself.
logging = []

# Enable nightly-only features for testing, clippy, etc.
nightly = []

# Run all libiberty tests, even the ones that are known not to pass yet.
run_libiberty_tests = []

[profile]

[profile.release]
debug = true
